--- a/index.html
+++ b/index.html
@@ -33,80 +33,90 @@
   </header>
   <main>
     <ol class="page-nav-1">
-      <li><a class="btn btn-1 btn-highlight" href="#">Introduction</a></li>
-      <li><a class="btn btn-2" href="#">What are Opioids?</a></li>
-      <li><a class="btn btn-3" href="#">Legal vs Illegal Opioids</a></li>
-      <li><a class="btn btn-4" href="#">The Escalating Fentanyl Crisis</a></li>
-      <li><a class="btn btn-5" href="#">Fentanyl's Hidden Dangers</a></li>
-      <li><a class="btn btn-6" href="#">The Cost of Substance Use</a></li>
-      <li><a class="btn btn-7" href="#">Opioid Poisoning: Hospitalizations & Emergency Department Visits</a></li>
+      <li><a class="btn btn-1" href="#hp-intro">Introduction</a></li>
+      <li><a class="btn btn-2" href="#what-are-opioids">What are Opioids?</a></li>
+      <li><a class="btn btn-3" href="#legal-vs-illegal">Legal vs Illegal Opioids</a></li>
+      <li><a class="btn btn-4" href="#escalaing-fentanyl-crisis">The Escalating Fentanyl Crisis</a></li>
+      <li><a class="btn btn-5" href="#hidden-dangers">Fentanyl's Hidden Dangers</a></li>
+      <li><a class="btn btn-6" href="#the-cost-of-use">The Cost of Substance Use</a></li>
+      <li><a class="btn btn-7" href="#hospitalizations">Opioid Poisoning: Hospitalizations & Emergency Department Visits</a></li>
     </ol>
-    <div class="info-text hp-intro">
-      <h1>Introduction</h1>
-      <p>The latest public health statement released December 12th, 2018, confirms the current opioid crisis is the worst drug problem in Canadian history and the reality is frightening. What was once inconceivable is the new truth with a reported 2,066 opioid-related deaths in the first half of 2018, and the grim news cautioning citizens the efforts to change the trajectory have failed (Health Canada, “Overview of national data on opioid-related harms and deaths,” 2018).</p>
-      <p>Communities across the provinces mourn the loss of friends, co-workers, and family members. Health and social community front-line workers are seeing an unprecedented ripple effect of the socioecological devastation ripping families apart as they fight to keep loved ones alive, support parents as they bury their children, and help young children who are now growing up without a parent. It’s unthinkable of those 2,066 deaths 94% were accidental – that’s 1942 people, 1398 or 72% of the accidental deaths were an involved fentanyl or fentanyl analogues (Health Canada, 2018). The contaminated illicit drug supply is poisoning the “first-time user”, the “recreational user”, the “closet user”, the “careful user”, the “experienced user”, there is no stereotype.</p>
-    </div>
-    <div class="info-text what-are-opioids">
-      <h2>What are Opioids?</h2>
-      <p>Health Canada defines opioids such as fentanyl, morphine, oxycodone, and hydromorphone as “drugs that assist in relieving pain”. The cognitive effects of prescription opioids can be very alluring, as they extend beyond pain signals in the brain to areas with emotional control and reward. When taken in higher doses, the side effects of the opioid increase – euphoria, relaxation, and less bodily pain. Persistent misuse alters the reward pathways in the brain and the desire to continue to use the opioid to continue to feel the pleasure escalates. The duress of craving opioids and fear of withdrawal can lead to patterns of misuse: Increase in Doses/Frequency of Use, Using with other drugs, Methods of Ingestion Change.</p>
-    </div>
-    <div class="info-text legal-vs-illegal">
-      <h2>Legal vs. Illegal Opioids?</h2>
-      <p>Legal opioids are prescribed by a health care professional to reduce pain related to injuries, surgery, long-term chronic pain, or dental procedures (Health Canada, 2019).</p>
-      <p>Illegal opioids are any opioids made, shared, or sold illegally (Health Canada, 2019).</p>
-      <p>Street drugs bought from a dealer an opioid given to you by someone who is not your health care provider (Health Canada, 2019).</p>
-      <p>Opioids that are not prescribed to you but are taken from someone else (Canada, “Opioids and the opioid crisis – Get the facts,” 2019). (Health Canada, 2019).</p>
-    </div>
-    <div class="naloxone-img">
-      <figure>
-        <img src="images/homepage-naloxone.jpg" alt="Image of naloxone kit">
-        <figcaption>Naloxone is a fast-acting drug used to temporarily reverse the effects of opioid overdoses. <a href="https://www.canada.ca/en/health-canada/services/substance-use/problematic-prescription-drug-use/opioids/naloxone.html">Learn more about Naloxone kits in Canada.</a></figcaption>
-      </figure>
-    </div>
-    <div class="info-text escalaing-fentanyl-crisis">
-      <h2>The Escalating Fentanyl Crisis</h2>
-      <p>According to The Royal Canadian Mounted Police (RCMP) fentanyl is a synthetic opioid more than one hundred times more powerful than morphine, is being imported into Canada illegally, and has contaminated the illegal drug supply.</p>
-      <p>"It’s a huge problem and it’s not just a policing problem"</p>
-      <p>“It’s not going to get better any time soon, I don’t think,” says Sergeant Darin Sheppard of the RCMP in Surrey, B.C. “We’re taking some of the right steps to slow it down, but there are a lot of communities that are just starting to experience the fentanyl issue.”</p>
-      <p>(“Fentanyl’s Deadly Path: How the powerful drug gets through Canada’s border”, 2018)</p>
-      <figure>
-        <img src="images/homepage-pills-in-hand.jpg" alt="Two hands cradling a pile of white round pills on a table">
-        <figcaption>"According to The Royal Canadian Mounted Police (RCMP) fentanyl is a synthetic opioid more than one hundred times more powerful than morphine."</figcaption>
-      </figure>
-    </div>
-    <div class="info-text hidden-dangers">
-      <h2>Fentanyl’s Hidden Danger</h2>
-      <p>Fentanyl has been mixed with other drugs such as heroin and cocaine (Comeau, 2018). It can be pressed in tablets made to look like prescription drugs. Overdoses have occurred where individuals were unaware (Drug Free Kids Canada, n.d.); they were consuming fentanyl. It is odorless and tasteless, and therefore, hard to detect (Drug Free Kids Canada, n.d.). It is often found in powder, pill, liquid, and blotter form (Drug Free Kids Canada, “Drugs,” n.d.).</p>
-      <p>Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult.</p>
-      <p>Unintentional exposure to pure fentanyl – touching or inhaling – can cause serious harm including death (Comeau, 2018). Fentanyl-related deaths have been increasing in Canada (Drug Free Kids Canada, n.d.)</p>
-      <figure>
-        <img src="images/homepage-lethal-dose.jpg" alt="Two milligrams of fentanyl beside a penny">
-        <figcaption>"Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult." Source Fentanyl. (n.d.). Retrieved November 24, 2020, from https://www.dea.gov/galleries/drug-images/fentanyl</figcaption>
-      </figure>
-    </div>
-    <div class="info-text hospitalizations">
-      <h2>Opioid Poisoning: Hospitalizations & Emergency Department Visits</h2>
-      <p>“Apparent Opioid-Related Deaths” Jan to Jun 2018 - Health Canada 2,066 Canadian lives lost to apparent opioid-related death Rates of hospitalizations due to opioid poisoning are highest for patients who live in communities with a population between 50,000 and 99,999 (CIHI, 2018).</p>
-      <p>In 2017, opioid poisoning hospitalization rates in smaller communities were 2.5 times higher than rates in Canada’s largest cities (CIHI, 2018). 2,066 deaths: 94% were accidental.</p>
-      <p>An average of 17 people were hospitalized for opioid poisonings in Canada each day in 2017— an increase from 16 per day in 2016. (Health Canada, 2018)</p>
-      <img src="images/homepage-medic.jpg" alt="image of the back of an ambulance">
-    </div>
-    <div class="info-text the-cost-of-use">
-      <h2>The Cost of Substance Use</h2>
-      <p>The overall economic cost of substance use in Canada in 2014 was estimated to be $38.4 billion. This estimate represents a cost of approximately $1,100 for every Canadian regardless of age (CCSA, 2018).</p>
-    </div>
-    <figure>
-      <h3>The 2014 Cost Breakdown of Substance Use</h3>
-      <img class="wide-view" src="images/homepage-table-wide.jpg" alt="The 2014 Cost Breakdown of Substance Use">
-      <img class="tall-view" src="images/homepage-table-tall.jpg" alt="The 2014 Cost Breakdown of Substance Use">
-      <h4>*Sault Ste. Marie Population in 2016: 73,368</h4>
-    </figure>
+    <article class="homepage-content">
+      <div class="info-text hp-intro" id="hp-intro">
+        <h1>Introduction</h1>
+        <p>The latest public health statement released December 12th, 2018, confirms the current opioid crisis is the worst drug problem in Canadian history and the reality is frightening. What was once inconceivable is the new truth with a reported 2,066 opioid-related deaths in the first half of 2018, and the grim news cautioning citizens the efforts to change the trajectory have failed (Health Canada, “Overview of national data on opioid-related harms and deaths,” 2018).</p>
+        <p>Communities across the provinces mourn the loss of friends, co-workers, and family members. Health and social community front-line workers are seeing an unprecedented ripple effect of the socioecological devastation ripping families apart as they fight to keep loved ones alive, support parents as they bury their children, and help young children who are now growing up without a parent. It’s unthinkable of those 2,066 deaths 94% were accidental – that’s 1942 people, 1398 or 72% of the accidental deaths were an involved fentanyl or fentanyl analogues (Health Canada, 2018). The contaminated illicit drug supply is poisoning the “first-time user”, the “recreational user”, the “closet user”, the “careful user”, the “experienced user”, there is no stereotype.</p>
+      </div>
+      <div class="info-text what-are-opioids" id="what-are-opioids">
+        <h2>What are Opioids?</h2>
+        <p>Health Canada defines opioids such as fentanyl, morphine, oxycodone, and hydromorphone as “drugs that assist in relieving pain”. The cognitive effects of prescription opioids can be very alluring, as they extend beyond pain signals in the brain to areas with emotional control and reward. When taken in higher doses, the side effects of the opioid increase – euphoria, relaxation, and less bodily pain. Persistent misuse alters the reward pathways in the brain and the desire to continue to use the opioid to continue to feel the pleasure escalates. The duress of craving opioids and fear of withdrawal can lead to patterns of misuse: Increase in Doses/Frequency of Use, Using with other drugs, Methods of Ingestion Change.</p>
+      </div>
+      <div class="info-text legal-vs-illegal" id="legal-vs-illegal">
+        <h2>Legal vs. Illegal Opioids?</h2>
+        <p>Legal opioids are prescribed by a health care professional to reduce pain related to injuries, surgery, long-term chronic pain, or dental procedures (Health Canada, 2019).</p>
+        <p>Illegal opioids are any opioids made, shared, or sold illegally (Health Canada, 2019).</p>
+        <p>Street drugs bought from a dealer an opioid given to you by someone who is not your health care provider (Health Canada, 2019).</p>
+        <p>Opioids that are not prescribed to you but are taken from someone else (Canada, “Opioids and the opioid crisis – Get the facts,” 2019). (Health Canada, 2019).</p>
+      </div>
+      <div class="naloxone-img">
+        <figure>
+          <img src="images/homepage-naloxone.jpg" alt="Image of naloxone kit">
+          <figcaption>Naloxone is a fast-acting drug used to temporarily reverse the effects of opioid overdoses. <a href="https://www.canada.ca/en/health-canada/services/substance-use/problematic-prescription-drug-use/opioids/naloxone.html">Learn more about Naloxone kits in Canada.</a></figcaption>
+        </figure>
+      </div>
+      <div class="info-text escalaing-fentanyl-crisis" id="escalaing-fentanyl-crisis">
+        <h2>The Escalating Fentanyl Crisis</h2>
+        <p>According to The Royal Canadian Mounted Police (RCMP) fentanyl is a synthetic opioid more than one hundred times more powerful than morphine, is being imported into Canada illegally, and has contaminated the illegal drug supply.</p>
+        <p>"It’s a huge problem and it’s not just a policing problem"</p>
+        <p>“It’s not going to get better any time soon, I don’t think,” says Sergeant Darin Sheppard of the RCMP in Surrey, B.C. “We’re taking some of the right steps to slow it down, but there are a lot of communities that are just starting to experience the fentanyl issue.”</p>
+        <p>(“Fentanyl’s Deadly Path: How the powerful drug gets through Canada’s border”, 2018)</p>
+      </div>
+      <div class="escalaing-fentanyl-crisis-img">
+        <figure>
+          <img src="images/homepage-pills-in-hand.jpg" alt="Two hands cradling a pile of white round pills on a table">
+          <figcaption>"According to The Royal Canadian Mounted Police (RCMP) fentanyl is a synthetic opioid more than one hundred times more powerful than morphine."</figcaption>
+        </figure>
+      </div>
+      <div class="info-text hidden-dangers" id="hidden-dangers">
+        <h2>Fentanyl’s Hidden Danger</h2>
+        <p>Fentanyl has been mixed with other drugs such as heroin and cocaine (Comeau, 2018). It can be pressed in tablets made to look like prescription drugs. Overdoses have occurred where individuals were unaware (Drug Free Kids Canada, n.d.); they were consuming fentanyl. It is odorless and tasteless, and therefore, hard to detect (Drug Free Kids Canada, n.d.). It is often found in powder, pill, liquid, and blotter form (Drug Free Kids Canada, “Drugs,” n.d.).</p>
+        <p>Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult.</p>
+        <p>Unintentional exposure to pure fentanyl – touching or inhaling – can cause serious harm including death (Comeau, 2018). Fentanyl-related deaths have been increasing in Canada (Drug Free Kids Canada, n.d.)</p>
+      </div>
+      <div class="hidden-dangers-img">
+        <figure>
+          <img src="images/homepage-lethal-dose.jpg" alt="Two milligrams of fentanyl beside a penny">
+          <figcaption>"Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult." Source Fentanyl. (n.d.). Retrieved November 24, 2020, from https://www.dea.gov/galleries/drug-images/fentanyl</figcaption>
+        </figure>
+      </div>
+      <div class="info-text hospitalizations" id="hospitalizations">
+        <div class="text">
+          <h2>Opioid Poisoning: Hospitalizations & Emergency Department Visits</h2>
+          <p>“Apparent Opioid-Related Deaths” Jan to Jun 2018 - Health Canada 2,066 Canadian lives lost to apparent opioid-related death Rates of hospitalizations due to opioid poisoning are highest for patients who live in communities with a population between 50,000 and 99,999 (CIHI, 2018). <br> In 2017, opioid poisoning hospitalization rates in smaller communities were 2.5 times higher than rates in Canada’s largest cities (CIHI, 2018). 2,066 deaths: 94% were accidental. <br> An average of 17 people were hospitalized for opioid poisonings in Canada each day in 2017— an increase from 16 per day in 2016. (Health Canada, 2018)</p>
+        </div>
+        <img src="images/homepage-medic.jpg" alt="image of the back of an ambulance">
+      </div>
+      <div class="info-text the-cost-of-use" id="the-cost-of-use">
+        <h2>The Cost of Substance Use</h2>
+        <p>The overall economic cost of substance use in Canada in 2014 was estimated to be $38.4 billion. This estimate represents a cost of approximately $1,100 for every Canadian regardless of age (CCSA, 2018).</p>
+      </div>
+      <div class="the-cost-of-use-img">
+        <figure>
+          <h3>The 2014 Cost Breakdown of Substance Use</h3>
+          <img class="wide-view" src="images/homepage-table-wide.jpg" alt="The 2014 Cost Breakdown of Substance Use">
+          <img class="tall-view" src="images/homepage-table-tall.jpg" alt="The 2014 Cost Breakdown of Substance Use">
+          <h4>*Sault Ste. Marie Population in 2016: 73,368</h4>
+        </figure>
+      </div>
+    </article>
   </main>
   <footer>
-    <img src="images/logo.png" alt="logo reads S S M and area drug strategy">
-    <p>This was created for educational purposes for Algonquin College. This is not my own written content. All information provided is from:</p>
-    <p>The SSM & Area Drug Strategy, Community Call to Action, 2019. Sault Ste. Marie (ON): SSMADS; 2019</p>
-    <a href="file:///Users/hollydrew/Desktop/OneDrive%20-%20Algonquin%20College/1.%20Semester%202/2.%20Web%20Design%202/Independent%20Project%20Plan/Sault-and-Area-Drug-Strategy-Full-Report-FINAL.pdf">Read the full report.</a>
+    <div class="footer-content">
+      <img src="images/logo.png" alt="logo reads S S M and area drug strategy">
+      <p>This was created for educational purposes for Algonquin College. This is not my own written content. All information provided is from:</p>
+      <p>The SSM & Area Drug Strategy, Community Call to Action, 2019. Sault Ste. Marie (ON): SSMADS; 2019</p>
+      <a href="file:///Users/hollydrew/Desktop/OneDrive%20-%20Algonquin%20College/1.%20Semester%202/2.%20Web%20Design%202/Independent%20Project%20Plan/Sault-and-Area-Drug-Strategy-Full-Report-FINAL.pdf">Read the full report.</a>
+    </div>
   </footer>
   <div class="footer-bar">
     <small>Web Design by Holly Drew</small>
