--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       <div class="hidden-dangers-img">
         <figure>
           <img src="images/homepage-lethal-dose.jpg" alt="Two milligrams of fentanyl beside a penny">
-          <figcaption>"Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult." Source Fentanyl. (n.d.). Retrieved November 24, 2020, from https://www.dea.gov/galleries/drug-images/fentanyl</figcaption>
+          <figcaption>"Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult." Source Fentanyl. (n.d.). Retrieved November 24, 2020, from <a href="https://www.dea.gov/galleries/drug-images/fentanyl">www.dea.gov</a></figcaption>
         </figure>
       </div>
       <div class="info-text hospitalizations" id="hospitalizations">
-        <div class="text">
+        <div class="hospitalizations-text">
           <h2>Opioid Poisoning: Hospitalizations & Emergency Department Visits</h2>
           <p>“Apparent Opioid-Related Deaths” Jan to Jun 2018 - Health Canada 2,066 Canadian lives lost to apparent opioid-related death Rates of hospitalizations due to opioid poisoning are highest for patients who live in communities with a population between 50,000 and 99,999 (CIHI, 2018). <br> In 2017, opioid poisoning hospitalization rates in smaller communities were 2.5 times higher than rates in Canada’s largest cities (CIHI, 2018). 2,066 deaths: 94% were accidental. <br> An average of 17 people were hospitalized for opioid poisonings in Canada each day in 2017— an increase from 16 per day in 2016. (Health Canada, 2018)</p>
         </div>
