--- a/spectrum-of-use.html
+++ b/spectrum-of-use.html
@@ -33,14 +33,114 @@
   </header>
   <main>
     <ol class="page-nav-1">
-      <li><a class="btn btn-1" href="#hp-intro">Introduction</a></li>
-      <li><a class="btn btn-2" href="#what-are-opioids">What are Opioids?</a></li>
-      <li><a class="btn btn-3" href="#legal-vs-illegal">Legal vs Illegal Opioids</a></li>
-      <li><a class="btn btn-4" href="#escalaing-fentanyl-crisis">The Escalating Fentanyl Crisis</a></li>
-      <li><a class="btn btn-5" href="#hidden-dangers">Fentanyl's Hidden Dangers</a></li>
-      <li><a class="btn btn-6" href="#the-cost-of-use">The Cost of Substance Use</a></li>
-      <li><a class="btn btn-7" href="#hospitalizations">Opioid Poisoning: Hospitalizations & Emergency Department Visits</a></li>
+      <li><a class="btn btn-1" href="#spectrum-info">The Spectrum of Substance Use</a></li>
+      <li><a class="btn btn-2" href="#algoma-insights">Algoma Community Haelth Insights</a></li>
+      <li><a class="btn btn-3" href="#concurrent-dis">Concurrest Disorders</a></li>
+      <li><a class="btn btn-4" href="#social-determinants">The Social Determinants of Health</a></li>
+      <li><a class="btn btn-5" href="#concurrent-dis-canada">Prevalance of Concurrent Disorders in Canada</a></li>
+      <li><a class="btn btn-6" href="#protective-factors">Protective Factors</a></li>
+      <li><a class="btn btn-7" href="#risk-factors">Risk Factors Related to Substance Use Disorders</a></li>
     </ol>
+    <article>
+      <div class="spectrum-info" id="spectrum-info">
+        <h1>The Spectrum of Substance Use</h1>
+        <h3>Responsible Use:</h3>
+        <p>Typically has positive health or social effects when taken as prescribed by a health care provider to an individual or as recommended.</p>
+        <h2>HIGH RISK OF OVERDOSE</h2>
+        <h3>Casual, Recreational, or Experimental Use:</h3>
+        <p>Individuals perceive health or social benefit of the substance to enhance performance or social networking. The high-risk behaviour is often seen as socially acceptable, integral to the “party scene”, and largely driven by movie or tv portrayal.</p>
+        <h3>Problematic Use:</h3>
+        <p>The impact of substance use extends beyond the individual to family, friends, colleagues, and community. The definition of problematic use is not limited to the frequency of consumption rather it recognizes the behaviour or impaired decision making associated to the substance use. A person may continue to be a high functioning member of society and struggle with substance use in silence.</p>
+        <h3>Substance Use Disorder (SUD):</h3>
+        <p>Use that has become habitual and compulsive despite negative health and social effects. Substance use disorders significantly impact health, wealth, home, friends, and family. Dangerous misconceptions regarding who is at risk of an overdose is often related to a person with a SUD due to historical, inaccurate, and often offensive stereotypes.</p>
+      </div>
+      <div class="concurrent-dis" id="concurrent-dis">
+        <h2>Concurrent Disorders</h2>
+        <p>The Canadian Center on Substance Use & Addictions (CCSA) defines concurrent disorders as “the term applied to mental health and substance use problems that occur together. The links between mental health and substance use problems are complex. These problems can develop independently as a result of common risk factors or one can lead to the other as a result of self-medication or prolonged distress” (“Mental Health and Problematic Substance Use,” CCSA, 2018).</p>
+        <p>Until recently, Canada’s mental health and addiction treatment systems have been segregated. People were often diagnosed with one disorder but not the other, resulting in a failure to treat both problems together (CCSA, 2018).</p>
+      </div>
+      <div class="concurrent-dis-canada">
+        <h2>Prevalence of Concurrent Disorders in Canada:</h2>
+        <p>People with a mental illness are twice as likely to have a substance use problem compared to the general population. At least 20% of people with a mental illness have a co-occurring substance use problem.</p>
+        <p>“People with substance use problems are up to 3 times more likely to have a mental illness. More than 15% of people with a substance use problem have a co-occurring mental illness” (CMHA, “Fast Facts about Mental Illness,” n.d.).</p>
+      </div>
+      <div class="algoma-insights" id="algoma-insights">
+        <div class="algoma-insights-text">
+          <h2>Algoma Community Health Insights:</h2>
+          <p>Serious mental health issues in Algoma include problematic substance use, self-harm and suicide.</p>
+          <p>Rates of hospitalization due to mental health or addictions are continuing to rise in Algoma. Females in Algoma are more likely to be hospitalized than males Young people aged 15 to 24 are more likely to experience mental illness and/or substance use disorders than any other age group (APH, 2018)</p>
+          <h3>Coroner and Medical Examiner Insights:</h3>
+          <p>Coroners, medical examiners, and toxicologists described how opioid- and other drug-related overdose deaths have occurred across all sociodemographic and socioeconomic groups.</p>
+        </div>
+        <div class="algoma-insights-list">
+          <h3>Characteristics more frequently observed among those who died included:</h3>
+          <ul>
+            <li>Decreased drug tolerance</li>
+            <li>Being alone at the time of overdose lack of social support</li>
+            <li>Polysubstance use was described as a key contributing factor</li>
+            <li>Lack of comprehensive and coordinated healthcare and social service follow-up</li>
+            <li>A history of mental health concerns, substance use disorder, trauma, and stigma</li>
+          </ul>
+        </div>
+        <div class="social-determinants" id="social-determinants">
+          <h2>The Social Determinants of Health</h2>
+          <p>The social determinants of health are often considered to be ‘at the heart’ of problematic substance use. These determinants are a broad range of personal, social, economic and environmental factors that influence health. Some of these include income, social status, employment, housing, education, childhood experiences, physical environment, social supports, access to health services, and culture. Along with the determinants of health, are multiple personal and environmental risk factors in life that can lead someone to engage in substance use behaviours.</p>
+          <p>Some examples of these risk factors include: exposure to problematic substance use in the home, exposure to abuse or trauma, adverse childhood experiences, poor academic achievement, loss of employment, coping ability, and availability of substances. Addressing these root causes of substance use can support healthy behaviours and help to reduce the possibility of substance use in our communities.</p>
+        </div>
+        <div class="protective-factors" id="protective-factors">
+          <h2>Protective Factors</h2>
+          <p>Substance use prevention often focuses on strengthening protective factors, in order to reduce the individual and environmental risk factors. Some examples include:</p>
+          <ul>
+            <li>Building healthy family & peer relationships</li>
+            <li>Providing supportive school & work environments</li>
+            <li>Improving community connections & cultural supports.</li>
+            <li>Improving individual coping skills to manage stress, emotional trauma, etc.</li>
+          </ul>
+        </div>
+        <div class="risk-factors" id="risk-factors">
+          <h2>Risk Factors Related to Substance Use Disorders</h2>
+          <div class="trauma">
+            <img src="" alt="">
+            <h3>Trauma</h3>
+            <p>Youth with a history of child welfare involvement are particularly at risk, as the initial transition out of foster care is associated with increased rates of problematic substance use (Health Canada, 2018).</p>
+          </div>
+          <div class="mental-health">
+            <img src="" alt="">
+            <h3>Mental Health</h3>
+            <p>People with a mental illness are twice as likely to experience problematic substance use compared to the general population (Health Canada, 2018).</p>
+          </div>
+          <div class="indigenous-people">
+            <img src="" alt="">
+            <h3>Indigenous People</h3>
+            <p>Indigenous peoples are at greater risk of experiencing mental health and substance use issues due to multiple factors, including the intergenerational effects of residential schools, and other devastating consequences of colonization (Health Canada, 2018).</p>
+          </div>
+          <div class="youth">
+            <img src="" alt="">
+            <h3>Youth</h3>
+            <p>Youth aged 15 to 24 are more likely to experience substance use related harm, have the highest rates of problem substance use nationally, & illegal drug use last year. Young Adults 18 to 25 have the highest binge drinking rates (Health Canada, 2018).</p>
+          </div>
+          <div class="homelessness">
+            <img src="" alt="">
+            <h3>Homelessness</h3>
+            <p>Those experiencing homelessness have a much higher rate of problematic substance use compared to the general Canadian population (Health Canada, 2018).</p>
+          </div>
+          <div class="grief">
+            <img src="" alt="">
+            <h3>Injury, grief, isolation</h3>
+            <p>Older Canadians are vulnerable to problematic substance use due to unique risk factors such as chronic physical conditions, unexpected or forced retirements, social isolation, and bereavement (Health Canada, 2018).</p>
+          </div>
+          <div class="gender">
+            <img src="" alt="">
+            <h3>Gender</h3>
+            <p>Men are more likely than women to use illicit substances and are less likely to seek support and assistance. Women tend to have lower levels of use than men, but they are more likely to develop related health problems. In 2017, the majority of accidental apparent opioid-related deaths occurred among males (78%) (Health Canada, 2018).</p>
+          </div>
+          <div class="sexuality">
+            <img src="" alt="">
+            <h3>Sexuality</h3>
+            <p>Evidence shows that gay, lesbian and bisexual individuals are at higher risk of problematic substance use compared to heterosexual individuals. For example, gay, lesbian and bisexual adolescents have been found to be 2 to 4 times more likely to use substances and lesbian and gay adults have been shown to experience higher rates of heavy drinking, compared to their heterosexual counterparts (Health Canada, 2018).</p>
+          </div>
+        </div>
+    </article>
   </main>
   <footer>
     <div class="footer-content">
