--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>SMM & Area Drug Strategy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/intro.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro:ital@0;1&display=swap" rel="stylesheet">
 </head>
