--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -33,14 +33,89 @@
   </header>
   <main>
     <ol class="page-nav-1">
-      <li><a class="btn btn-1" href="#hp-intro">Introduction</a></li>
-      <li><a class="btn btn-2" href="#what-are-opioids">What are Opioids?</a></li>
-      <li><a class="btn btn-3" href="#legal-vs-illegal">Legal vs Illegal Opioids</a></li>
-      <li><a class="btn btn-4" href="#escalaing-fentanyl-crisis">The Escalating Fentanyl Crisis</a></li>
-      <li><a class="btn btn-5" href="#hidden-dangers">Fentanyl's Hidden Dangers</a></li>
-      <li><a class="btn btn-6" href="#the-cost-of-use">The Cost of Substance Use</a></li>
-      <li><a class="btn btn-7" href="#hospitalizations">Opioid Poisoning: Hospitalizations & Emergency Department Visits</a></li>
+      <li><a class="btn btn-1" href="#use-in-algoma">Substance use in Algoma</a></li>
+      <li><a class="btn btn-2" href="#algoma-critical-insights">Algoma Substance Use Critical Insights</a></li>
+      <li><a class="btn btn-3" href="#pregnancy-use">Substance Use During Pregnancy</a></li>
+      <li><a class="btn btn-4" href="#blood-borne">Blood-Borne Infections Related to Substance Use</a></li>
+      <li><a class="btn btn-5" href="#youth-cannabis-use">Youth Canabis Use in Algoma</a></li>
+      <li><a class="btn btn-6" href="#">Informant Interview Insights</a></li>
+      <li><a class="btn btn-7" href="#">Informant Interview Statements</a></li>
     </ol>
+  <article>
+    <div class="use-in-algoma" id="use-in-algoma">
+      <div class="use-in-algoma-text">
+        <h1>Substance Use in Algoma</h1>
+        <p>The Algoma Public Health Unit “Community Health Profile” provides a high-level snapshot of some of the substance use related issues in our community in Chapter 8: Substance Use & Mental Health.</p>
+      </div>
+      <div class="use-in-algoma-facts">
+        <p>The majority of Algoma residents report staying away from illicit drugs (APH, 2018)</p>
+        <p class="4-in-10">Nearly 4 out of 10 Algoma residents have used an illicit drug in their lifetime (APH, 2018)</p>
+        <p class="4-in-10">4 out of 10 Algoma residents have used cannabis more than once in their lifetime (APH, 2018).</p>
+      </div>
+      <div>
+        <p>Out of 50 Used any illcit substance 39.7 Used cannabis more than once 44.4 Used cocaine 10 Used amphetamine or speed 4.8 Used hailucinogens 13.2 Used solvents 1.3</p>
+      </div>
+    </div>
+    <div class="algoma-critical-insights" id="algoma-critical-insights">
+      <h2>Algoma Substance Use Critical Insights</h2>
+      <p>Ranked #1 as the highest rate of opioid poisoning related emergency department visits compared in Ontario and Alberta with a population of 50,000 - 99,999 (CIHI, 2018).</p>
+      <p>Ranked #8 in the top 15 highest number of opioid poisoning hospitalizations by census subdivision, Canada, 2017 (CIHI, 2018).</p>
+      <p>There were 22 deaths due to opioid overdoses in Algoma in 2017 (Public Health, 2018).</p>
+      <p>2017 Opioid-Related Deaths per 100,000 for Algoma 19.1% - Double the province rate of 8.9% (APH, 2018).</p>
+    </div>
+    <div class="youth-cannabis-use" id="youth-cannabis-use">
+      <h2>Youth Cannabis Use in Algoma</h2>
+      <p>Algoma Youth are struggling with unhealthy behaviours such as smoking/vaping tobacco and cannabis. (APH, 2018).</p>
+      <p>28.3% of Algoma youth aged 12 to 19 years old have tried cannabis. In Ontario overall, 22.9% of youth have tried cannabis APH, 2018).</p>
+    </div>
+    <div class="pregnancy-use" id="pregnancy-use">
+      <h2>Substance Use During Pregnancy</h2>
+      <p>6.1% of Algoma mothers use alcohol or drugs during pregnancy (APH, 2018). This is comparable to 4.3% of mothers in Ontario. Alcohol and drug use during a pregnancy can lead to fetal alcohol spectrum disorder (FASD) and other serious pregnancy and birth complications (APH, 2018). 1 in 4 Algoma mothers experienced a mental health challenge during a pregnancy or postpartum, most commonly anxiety and/or depression (APH, 2018) This is a higher proportion of mothers compared to Ontario (25.6%versus 15.8%).</p>
+    </div>
+    <div class="blood-borne" id="blood-borne">
+      <h2>Blood-Borne Infections Related to Substance Use</h2>
+      <p>In 2017, there were 83 people diagnosed with Hepatitis C in Algoma, which was the highest number of new cases in a year since 2008 (APH, 2018)</p>
+      <p>During the 5-year period between 2013 and 2017, Algoma’s rate* of new hepatitis C cases was the highest in the Northeast and in Ontario (APH, 2018) (APH Report: Hepatitis C in Algoma and Ontario. http://www.algomapublichealth.com/media/2307/2017-januarybulletin-algoma-heptatits-c-final.pdf)</p>
+    </div>
+    <div class="informant-insights" id="informant-insights">
+      <div class="informant-insights-text">
+        <h2>nformant Interview Insights</h2>
+        <p>Community Readiness - No Awareness or Resistance: Some community members do not feel opioids are an issue or are unaware of the problem while some community members know substance use is an issue across Canada but there is little recognition of the local opioid crisis.</p>
+        <p>Community members accessing help have difficulty understanding the clinical language describing the various program treatment and wraparound treatment processes. (i.e., websites, information documents)</p>
+        <p>Overdose Risk Awareness: Prescribed, Casual, Recreational, or Experimental substance use related overdose risks are overlooked and are often considered socially acceptable. The dangerously inaccurate historical stereotype “addict” drives the perceived risk related to substance use morbidity and mortality.</p>
+        <p>Hours of Operation for services are brief or represent business hours.</p>
+        <p>Coordination of care is problematic often leaving gaps in the treatment journey, cause transportation issues (i.e., parking, bus fare, fuel, time), redundant admission processes, lack of services available, requirements to access service (i.e., government id, health card, address).</p>
+        <p>Local treatment options are limited, and integral services are unavailable for both youth and adults (i.e., withdrawal treatment, day/evening treatment options, vocational rehabilitation, congruent treatment for concurrent disorders)</p>
+        <p>Limited available relevant, timely, measurable local captured data and surveillance information related to mental health and substance use. (i.e., the number of people impacted, waiting for service, who are leaving the community to access services, completing treatment, etc.)</p>
+        <p>Inconsistent alert response public advisory notice related to increased overdose frequency.</p>
+      </div>
+      <div class="informant-insights-quote">
+        <h2>The Social Media Narrative</h2>
+        <p>Social media activism can drive misinformation, distort public understanding, and disrupt support.</p>
+        <p>The lack of civility can increase polarization.</p>
+        <p>Comments can be readily enforced because of the lack of viewpoints and critique of ideas.</p>
+        <p>Misinformation can be easily shared to generate a large audience further escalating discrimination and stigma around substance use.</p>
+      </div>
+      <div class="informant-statements" id="informant-statements">
+        <h2>Informant Interview Statements</h2>
+        <h3>I was told that I need to be sober to get into treatment for x” days. How am I supposed to do that when the only thing keeping me alive right now is Methadone?”</h3>
+        <p>I can’t work - I am currently on Ontario Works and waiting for Approval to move to Disability. Wouldn’t it be cheaper and easier to build a treatment centre?</p>
+        <p>Every time you go to the hospital you pay $6 for parking, or you take 2 buses there and back.</p>
+        <p>I don’t function on business hours but these places that supposed to help are open a couple of hours per week which is not helping.</p>
+        <p>I like to go to the Neighbourhood Resource Centre - There’s always someone there to help, doctors, I can even get haircuts there.</p>
+        <h3>I called ConnexOntario they just gave me a list. I could have come up with a better list than that.</h3>
+        <p>My daughter has been missing since July - People say they saw her, but I haven’t heard from her.</p>
+        <p>Why do I have to wait more than 2 months for treatment and how I am going to get there.</p>
+        <p>I was so frustrated - I looked on the SAH website, and it says withdrawal, crisis, and looks like there is help there but the detox centre is a house on Queen Street with 2 floors, no medical staff to support withdrawal. They told me if I was brought to the detox centre, they wouldn’t be able to assist me.</p>
+        <p>My withdrawals from heroin are so awful, I have done things I never thought I would ever do just to get money to buy more.</p>
+        <p>It’d be nice to use clean needles but it’s not worth the bus rides.</p>
+        <h3>I am in recovery - all the services in place to help are downtown! That’s exactly where I don’t want to go... that’s where the temptation is.</h3>
+
+      </div>
+
+    </div>
+
+  </article>
   </main>
   <footer>
     <div class="footer-content">
